*remind* fix bug in LCOE reporting, now LCOE mif available for all types of runs
fixed: added documentation etc. of last commit, did not built before

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,rename)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_)
@@ -161,6 +162,7 @@ importFrom(magclass,getSets)
 importFrom(magclass,getYears)
 importFrom(magclass,is.magpie)
 importFrom(magclass,lowpass)
+importFrom(magclass,magpie_expand)
 importFrom(magclass,mbind)
 importFrom(magclass,mselect)
 importFrom(magclass,new.magpie)
