--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(abind,abind)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
 importFrom(data.table,setnames)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
@@ -100,6 +101,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
@@ -207,5 +209,6 @@ importFrom(tidyr,extract)
 importFrom(tidyr,nesting)
 importFrom(tools,md5sum)
 importFrom(utils,capture.output)
+importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
