adjusted the Capacity factor calculation of the new plant LCOE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ importFrom(tidyr,"%>%")
 importFrom(tidyr,complete)
 importFrom(tidyr,extract)
 importFrom(tidyr,nesting)
+importFrom(tidyr,spread)
 importFrom(tools,md5sum)
 importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
