--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ importFrom(magclass,read.report)
 importFrom(magclass,setCells)
 importFrom(magclass,setNames)
 importFrom(magclass,setYears)
+importFrom(magclass,time_interpolate)
 importFrom(magclass,write.report)
 importFrom(magclass,write.report2)
 importFrom(magpie,read_all)
