calculates employment (understand as work force needed) from REMIND results for the energy supply sector.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,12 +146,14 @@ importFrom(lusweave,swfigure)
 importFrom(lusweave,swlatex)
 importFrom(lusweave,swopen)
 importFrom(lusweave,swtable)
+importFrom(madrat,calcOutput)
 importFrom(madrat,toolGetMapping)
 importFrom(madrat,toolMappingFile)
 importFrom(magclass,"getNames<-")
 importFrom(magclass,"getRegions<-")
 importFrom(magclass,"getSets<-")
 importFrom(magclass,"getYears<-")
+importFrom(magclass,add_columns)
 importFrom(magclass,add_dimension)
 importFrom(magclass,as.data.frame)
 importFrom(magclass,as.magpie)
