--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,11 +65,13 @@ importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,setnames)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do_)
 importFrom(dplyr,filter)
 importFrom(dplyr,filter_)
+importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,inner_join)
@@ -212,7 +214,9 @@ importFrom(stats,lag)
 importFrom(stats,quantile)
 importFrom(tidyr,"%>%")
 importFrom(tidyr,complete)
+importFrom(tidyr,expand)
 importFrom(tidyr,extract)
+importFrom(tidyr,gather)
 importFrom(tidyr,nesting)
 importFrom(tidyr,spread)
 importFrom(tools,md5sum)
