Add a function to report EDGE-T variables by appending the vars to the MIF file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(reportCharts)
 export(reportCosts)
 export(reportCrossVariables)
 export(reportDiagnosis)
+export(reportEDGETransport)
 export(reportEmi)
 export(reportEmiAirPol)
 export(reportEnergyInvestment)
@@ -58,6 +59,7 @@ export(reportTrade)
 export(toolRegionSubsets)
 export(validationREMIND)
 export(validationSummary)
+import(data.table)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(abind,abind)
 importFrom(data.table,":=")
@@ -207,6 +209,7 @@ importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
+importFrom(rmndt,approx_dt)
 importFrom(scales,pretty_breaks)
 importFrom(stats,IQR)
 importFrom(stats,as.formula)
