--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,9 @@ importFrom(abind,abind)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,fread)
+importFrom(data.table,fwrite)
+importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
