add function to copy mif and gdx files of a suite of runs into one experiment folder

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(convergenceCheck)
 export(dashboard)
 export(deletePlus)
 export(gdx.copy)
+export(getRunsMIFGDX)
 export(plotCDR)
 export(plotLCOE)
 export(read.reportEntry)
