Add an FE intensity plot by GDP.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,7 @@ importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
 importFrom(rmndt,approx_dt)
+importFrom(rmndt,magpie2dt)
 importFrom(scales,pretty_breaks)
 importFrom(stats,IQR)
 importFrom(stats,as.formula)
