add function to get CES total efficiencies from gdx file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dashboard)
 export(deletePlus)
 export(gdx.copy)
 export(getRunsMIFGDX)
+export(get_total_efficiencies)
 export(plotCDR)
 export(plotLCOE)
 export(read.reportEntry)
@@ -88,6 +89,7 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_)
+importFrom(dplyr,sym)
 importFrom(dplyr,tbl_df)
 importFrom(dplyr,tribble)
 importFrom(dplyr,ungroup)
@@ -205,6 +207,7 @@ importFrom(quitte,getColValues)
 importFrom(quitte,inline.data.frame)
 importFrom(quitte,order.levels)
 importFrom(quitte,overwrite)
+importFrom(quitte,read.gdx)
 importFrom(quitte,sum_total)
 importFrom(readr,read_csv)
 importFrom(remulator,calc_supplycurve)
