fix reportEmi() to work on testOneRegi gdxes
- v_emi is empty for regions other than c_testOneRegi_region, which
  breaks computations with magclass objects

- v_emi is therefore extended to the full range of regi, filling up
  with NAs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,8 +227,10 @@ importFrom(tidyr,complete)
 importFrom(tidyr,expand)
 importFrom(tidyr,extract)
 importFrom(tidyr,gather)
+importFrom(tidyr,matches)
 importFrom(tidyr,nesting)
 importFrom(tidyr,spread)
+importFrom(tidyr,unite)
 importFrom(tools,md5sum)
 importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
