rework and extent LCOE reporting (in particular new plant LCOE) and LCOE plot scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compareScenarios)
 export(convGDX2MIF)
 export(convGDX2MIF_LCOE)
 export(convGDX2MIF_fallback_for_coupling)
+export(convGDX2CSV_LCOE)
 export(convergenceCheck)
 export(dashboard)
 export(deletePlus)
