Missing files from previous commit (after building library)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(dplyr,tbl_df)
 importFrom(dplyr,tribble)
 importFrom(dplyr,ungroup)
 importFrom(gdx,readGDX)
+importFrom(gdxdt,readgdx)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,coord_cartesian)
