--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: remind
 Type: Package
 Title: The REMIND R package
-Version: 36.163.1
-Date: 2020-06-10
+Version: 36.163.2
+Date: 2020-06-15
 Author: Anastasis Giannousakis, Michaja Pehl
 Maintainer: Anastasis Giannousakis <giannou@pik-potsdam.de>
 Description: Contains the REMIND-specific routines for data and model output manipulation.
@@ -36,12 +36,13 @@ Imports:
     lubridate,
     plotly,
     data.table,
-    rmndt
+    rmndt,
+    gdxdt
 Encoding: UTF-8
 License: LGPL-3
 RoxygenNote: 7.1.0
 Suggests:
 	testthat,
 	sr15data
-ValidationKey: 6662327913
+ValidationKey: 6664154496
 VignetteBuilder: knitr
