Calculation of energy system emissions for transport (#53)
* Added upstream emissions from transport.

* Missing files from previous commit (after building library)

* Re-Add aggregate emission categories.

* Add correct variable names for aggregate variables.

Co-authored-by: Marianna Rottoli <rottoli@pik-potsdam.de>
Co-authored-by: Alois Dirnaichner <alodi@directbox.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: remind
 Type: Package
 Title: The REMIND R package
-Version: 36.165.1
-Date: 2020-06-15
+Version: 36.165.2
+Date: 2020-06-16
 Author: Anastasis Giannousakis, Michaja Pehl
 Maintainer: Anastasis Giannousakis <giannou@pik-potsdam.de>
 Description: Contains the REMIND-specific routines for data and model output manipulation.
@@ -36,12 +36,13 @@ Imports:
     lubridate,
     plotly,
     data.table,
-    rmndt
+    rmndt,
+    gdxdt
 Encoding: UTF-8
 License: LGPL-3
 RoxygenNote: 7.1.0
 Suggests:
 	testthat,
 	sr15data
-ValidationKey: 6664504628
+ValidationKey: 6664884708
 VignetteBuilder: knitr
