--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,7 +152,7 @@ importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,second)
 importFrom(lubridate,seconds_to_period)
-importFrom(lucode,getScenNames)
+importFrom(lucode2,getScenNames)
 importFrom(luplot,magpie2ggplot2)
 importFrom(luplot,plotcountrymap)
 importFrom(luscale,speed_aggregate)
