--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: remind
 Type: Package
 Title: The REMIND R package
-Version: 36.170.1
-Date: 2020-08-07
-Author: Anastasis Giannousakis, Michaja Pehl
-Maintainer: Anastasis Giannousakis <giannou@pik-potsdam.de>
+Version: 36.170.2
+Date: 2020-08-10
+Authors@R: as.person(c(
+	   "Anastasis Giannousakis <giannou@pik-potsdam.de> [aut,cre]",
+	   "Michaja Pehl [aut]"))
 Description: Contains the REMIND-specific routines for data and model output manipulation.
 Depends:
     gdx(>= 1.29),
@@ -44,5 +45,5 @@ RoxygenNote: 7.1.1
 Suggests:
 	testthat,
 	sr15data
-ValidationKey: 6684596181
+ValidationKey: 6685699768
 VignetteBuilder: knitr
