--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: remind
 Type: Package
 Title: The REMIND R package
-Version: 36.171.1
-Date: 2020-08-11
+Version: 36.171.2
+Date: 2020-08-17
 Authors@R: as.person(c(
 	   "Anastasis Giannousakis <giannou@pik-potsdam.de> [aut,cre]",
 	   "Michaja Pehl [aut]"))
@@ -46,3 +46,4 @@ Suggests:
 	testthat,
 	sr15data
 VignetteBuilder: knitr
+ValidationKey: 6688416592
