fix reportEmi() to not report NA data
- some Heat and CCU figures where NA because they are calculated using
  shares which have no valid values if the denominator is zero
- replace_non_finite() replaces all those data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(readReportingMIF)
 export(readSupplycurveBio)
 export(readTimeStepWeight)
 export(readTrade)
+export(replace_non_finite)
 export(reportCapacity)
 export(reportCapitalStock)
 export(reportCharts)
