fix Emi|CO2|Carbon Capture and Storage|IndustryCCS calculations
- v37_emiIndCCSmax would not be read correctly from certain gdxes (see
  https://github.com/pik-piam/gdx/issues/2)
- v37_emiIndCCSmax is defined over different sets (all_enty, emiInd37)
  in different realisations

- fixed the reading of v37_emiIndCCSmax and harmonised the set names to
  emiInd37

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do_)
@@ -92,7 +93,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_)
 importFrom(dplyr,sym)
-importFrom(dplyr,tbl_df)
 importFrom(dplyr,tribble)
 importFrom(dplyr,ungroup)
 importFrom(gdx,readGDX)
