add calc_CES_marginals() to calculate marginals and prices of CES production factors from .gdx files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calcKayaDecomp)
 export(calcNetTrade)
 export(calcNetTradeValue)
 export(calcPrice)
+export(calc_CES_marginals)
 export(compareScenarios)
 export(convGDX2CSV_LCOE)
 export(convGDX2MIF)
@@ -87,6 +88,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
@@ -97,6 +99,7 @@ importFrom(dplyr,tribble)
 importFrom(dplyr,ungroup)
 importFrom(gdx,readGDX)
 importFrom(gdxdt,readgdx)
+importFrom(gdxrrw,gdxInfo)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,coord_cartesian)
@@ -224,6 +227,7 @@ importFrom(remulator,calc_supplycurve)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(rlang,is_empty)
 importFrom(rmarkdown,render)
 importFrom(rmndt,approx_dt)
 importFrom(rmndt,magpie2dt)
@@ -234,11 +238,13 @@ importFrom(stats,lag)
 importFrom(stats,quantile)
 importFrom(tidyr,"%>%")
 importFrom(tidyr,complete)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,expand)
 importFrom(tidyr,extract)
 importFrom(tidyr,gather)
 importFrom(tidyr,matches)
 importFrom(tidyr,nesting)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
 importFrom(tidyr,unite)
 importFrom(tools,md5sum)
