--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,33 +12,34 @@ Depends:
     magclass(>= 3.37)
 Imports:
     abind,
+    data.table,
     dplyr,
     flexdashboard,
+    gdxdt,
+    gdxrrw,
+    ggplot2,
+    highcharter,
+    iamc,
     knitr,
+    lubridate,
     lucode2,
     luplot,
     luscale,
     lusweave,
     madrat,
+    magpie,
     mip,
-    iamc,
+    plotly,
     quitte,
+    RColorBrewer,
     readr,
+    remulator,
     reshape2,
     rlang,
-    tidyr,
-    remulator,
-    magpie,
-    ggplot2,
     rmarkdown,
-    RColorBrewer,
-    scales,
-    highcharter,
-    lubridate,
-    plotly,
-    data.table,
     rmndt,
-    gdxdt
+    scales,
+    tidyr
 Encoding: UTF-8
 License: LGPL-3
 RoxygenNote: 7.1.1
