--- a/NAMESPACE
+++ b/NAMESPACE
@@ -216,6 +216,7 @@ importFrom(quitte,calcCumulatedDiscount)
 importFrom(quitte,character.data.frame)
 importFrom(quitte,getColValues)
 importFrom(quitte,getRegs)
+importFrom(quitte,getScenarios)
 importFrom(quitte,inline.data.frame)
 importFrom(quitte,order.levels)
 importFrom(quitte,overwrite)
@@ -252,3 +253,4 @@ importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
 importFrom(utils,write.table)
+importFrom(zoo,na.locf)
