refactor calculation of region subset sums
- use new function calc_regionSubset_sums() instead of 16 identical
  one-liners

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calcNetTrade)
 export(calcNetTradeValue)
 export(calcPrice)
 export(calc_CES_marginals)
+export(calc_regionSubset_sums)
 export(compareScenarios)
 export(convGDX2CSV_LCOE)
 export(convGDX2MIF)
@@ -174,6 +175,7 @@ importFrom(magclass,"getNames<-")
 importFrom(magclass,"getRegions<-")
 importFrom(magclass,"getSets<-")
 importFrom(magclass,"getYears<-")
+importFrom(magclass,`getRegions<-`)
 importFrom(magclass,add_columns)
 importFrom(magclass,add_dimension)
 importFrom(magclass,as.data.frame)
