--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: remind
 Type: Package
 Title: The REMIND R package
-Version: 36.182.0
-Date: 2021-01-07
+Version: 36.182.1
+Date: 2021-01-11
 Authors@R: as.person(c(
 	   "Anastasis Giannousakis <giannou@pik-potsdam.de> [aut,cre]",
 	   "Michaja Pehl [aut]"))
@@ -45,6 +45,7 @@ Encoding: UTF-8
 License: LGPL-3
 RoxygenNote: 7.1.1
 Suggests:
-	testthat,
-	sr15data
+    testthat,
+    sr15data,
+    covr
 VignetteBuilder: knitr
