bugfix in emission reporting to handle NAs returned by dataframe subsetting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ importFrom(lusweave,swtable)
 importFrom(madrat,calcOutput)
 importFrom(madrat,toolGetMapping)
 importFrom(madrat,toolMappingFile)
+importFrom(madrat,toolNAreplace)
 importFrom(magclass,"getNames<-")
 importFrom(magclass,"getRegions<-")
 importFrom(magclass,"getSets<-")
