add readAll, remove magpie dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,7 @@ importFrom(magclass,lowpass)
 importFrom(magclass,magpie_expand)
 importFrom(magclass,mbind)
 importFrom(magclass,mselect)
+importFrom(magclass,ndata)
 importFrom(magclass,new.magpie)
 importFrom(magclass,read.report)
 importFrom(magclass,replace_non_finite)
@@ -202,7 +203,6 @@ importFrom(magclass,setYears)
 importFrom(magclass,time_interpolate)
 importFrom(magclass,write.report)
 importFrom(magclass,write.report2)
-importFrom(magpie,read_all)
 importFrom(mip,mipArea)
 importFrom(mip,mipBarYearData)
 importFrom(mip,mipLineHistorical)
