adds reportEmployment to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(reportDiagnosis)
 export(reportEDGETransport)
 export(reportEmi)
 export(reportEmiAirPol)
+export(reportEmployment)
 export(reportEnergyInvestment)
 export(reportExtraction)
 export(reportFE)
@@ -184,6 +185,7 @@ importFrom(magclass,collapseNames)
 importFrom(magclass,complete_magpie)
 importFrom(magclass,dimReduce)
 importFrom(magclass,dimSums)
+importFrom(magclass,getItems)
 importFrom(magclass,getNames)
 importFrom(magclass,getRegions)
 importFrom(magclass,getSets)
