magclass 6 compatibility fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ importFrom(lusweave,swtable)
 importFrom(madrat,calcOutput)
 importFrom(madrat,toolGetMapping)
 importFrom(madrat,toolNAreplace)
+importFrom(magclass,"getItems<-")
 importFrom(magclass,"getNames<-")
 importFrom(magclass,"getRegions<-")
 importFrom(magclass,"getSets<-")
@@ -184,6 +185,7 @@ importFrom(magclass,collapseNames)
 importFrom(magclass,complete_magpie)
 importFrom(magclass,dimReduce)
 importFrom(magclass,dimSums)
+importFrom(magclass,getItems)
 importFrom(magclass,getNames)
 importFrom(magclass,getRegions)
 importFrom(magclass,getSets)
